--- a/src/main/resources/templates/layouts/adminheader.html
+++ b/src/main/resources/templates/layouts/adminheader.html
@@ -14,8 +14,9 @@
   <th:block th:fragment="adminheader">
         <a class ="link" href="/index">Главная</a>
         <a class ="link" href="/admin/users">Администрирование</a>
-        <a class ="link" href="/admin/items">Товары</a>
+<!--        <a class ="link" href="/admin/items">Товары</a>-->
         <a class ="link" href="/admin/orders">Заказы</a>
+        <a class ="link" href="/admin/items-search">Товары</a>
         <a class ="link" href="/logout">Выйти</a>
     </th:block>
 
