--- a/src/main/resources/templates/layouts/categorybrands.html
+++ b/src/main/resources/templates/layouts/categorybrands.html
@@ -19,7 +19,7 @@
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordian" th:href="@{'/category/' + ${category.id}}">
                                         <span class="badge pull-right">
-                                            <i class="fa fa-plus"> </i>
+<!--                                            <i class="fa fa-plus"> </i>-->
                                         </span>
                                     [[${category.title}]]
                                     <!-- knittingthreads -->
