--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -121,3 +121,26 @@
     width: 100%;
     height: 100%;
 }
+
+/*Поиск*/
+
+.search-items form {
+    width:400px;
+    margin:auto;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    align-content: end;
+}
+.search-items input{
+    padding:4px 10px;
+    border:0;
+    font-size:14px;
+}
+.search-items .search {
+    width: 75%;
+}
+.search-items .submit{
+    width: 70px;
+    background-color: #1c87c9;
+    color:#ffffff;
+}
