--- a/src/main/resources/templates/layouts/items/tableLayout.html
+++ b/src/main/resources/templates/layouts/items/tableLayout.html
@@ -1,52 +1,52 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<th:block th:fragment="itemsTableLayout(items)">
-    <table class="table">
-        <thead>
-        <th>id</th>
-        <th>Article</th>
-        <th>Price</th>
-        <th>Color</th>
-        <th>Quantity</th>
-        <th>Unit</th>
-        <th>Brand</th>
-        <th>Category</th>
-        <th>Composition</th>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<th:block th:fragment="itemsTableLayout(items)">-->
+<!--    <table class="table">-->
+<!--        <thead>-->
+<!--        <th>id</th>-->
+<!--        <th>Article</th>-->
+<!--        <th>Price</th>-->
+<!--        <th>Color</th>-->
+<!--        <th>Quantity</th>-->
+<!--        <th>Unit</th>-->
+<!--        <th>Brand</th>-->
+<!--        <th>Category</th>-->
+<!--        <th>Composition</th>-->
 
-        <th>edit</th>
-        <th>delete</th>
-        </thead>
-        <tbody>
-        <th:block th:each="product : ${products}">
-            <tr>
-                <td>[[${product.id}]]</td>
-                <td>[[${product.article}]]</td>
-                <td>[[${product.price}]]</td>
-                <td>[[${product.color}]]</td>
-                <td>[[${product.quantity}]]</td>
-                <td>[[${product.unit}]]</td>
-                <td>[[${product.brand.title}]]</td>
-                <td>[[${product.category.title}]]</td>
-                <td>[[${product.composition.title}]]</td>
+<!--        <th>edit</th>-->
+<!--        <th>delete</th>-->
+<!--        </thead>-->
+<!--        <tbody>-->
+<!--        <th:block th:each="product : ${products}">-->
+<!--            <tr>-->
+<!--                <td>[[${product.id}]]</td>-->
+<!--                <td>[[${product.article}]]</td>-->
+<!--                <td>[[${product.price}]]</td>-->
+<!--                <td>[[${product.color}]]</td>-->
+<!--                <td>[[${product.quantity}]]</td>-->
+<!--                <td>[[${product.unit}]]</td>-->
+<!--                <td>[[${product.brand.title}]]</td>-->
+<!--                <td>[[${product.category.title}]]</td>-->
+<!--                <td>[[${product.composition.title}]]</td>-->
 
-                <td>
-                <a class="button" th:href="@{'/admin/items/' + ${product.id}}">edit</a>
-                </td>
+<!--                <td>-->
+<!--                <a class="button" th:href="@{'/admin/items/' + ${product.id}}">edit</a>-->
+<!--                </td>-->
 
-                <td>
-                    <form method="post" th:action="@{'/admin/items/delete/' + ${product.id}}">
-                        <input class="button" type="submit" value="delete">
-                    </form>
-                </td>
-            </tr>
-        </th:block>
-        </tbody>
-    </table>
-</th:block>
-</body>
-</html>
+<!--                <td>-->
+<!--                    <form method="post" th:action="@{'/admin/items/delete/' + ${product.id}}">-->
+<!--                        <input class="button" type="submit" value="delete">-->
+<!--                    </form>-->
+<!--                </td>-->
+<!--            </tr>-->
+<!--        </th:block>-->
+<!--        </tbody>-->
+<!--    </table>-->
+<!--</th:block>-->
+<!--</body>-->
+<!--</html>-->
