--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -55,18 +55,28 @@
                 <div class="signup-form"><!--sign up form-->
                     <h2>Регистрация нового пользователя</h2>
                     <form th:action="@{/registration}" method="post">
-                        <input type="text" placeholder="Name" name="username" required="required"/>
-                        <span th:if="${error == 'username'}"> Username некорректен или занят</span>
+                        <input type="text" placeholder="Name" name="username" required="required" minlength="5"/>
+                        <span th:if="${error == 'username'}"> Имя пользователя или email некорректен или занят</span>
                         <input type="email" placeholder="email" name="email" required="required"/>
-                        <input type="password" placeholder="Password" name="password" required="required"/>
-                        <input type="password" placeholder="Matching Password" name="matchingPassword" required="required"/>
+                        <input type="password" placeholder="Password" name="password" required="required" minlength="5"/>
+                        <input type="password" placeholder="Matching Password" name="matchingPassword" required="required" minlength="5"/>
                         <span th:if="${error == 'password'}">Пароли не совпадает </span>
                         <button type="submit" class="btn btn-default">Зарегистрировать</button>
                     </form>
                 </div><!--/sign up form-->
-
-
-
+<!--                    <div th:if="${param.success}">-->
+<!--                        <div class="alert alert-info">You've successfully registered</div>-->
+<!--                    </div>-->
+<!--                    <form th:action="@{/registration}" th:object="${user}" method="post">-->
+<!--                        <input type="text" th:field="*{username}" required minlength="3" maxlength="20" />-->
+<!--                        <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Error</div>-->
+<!--                        <input type="email" th:field="*{email}" />-->
+<!--                        <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Error</div>-->
+<!--                        <input type="password" th:field="*{password}" />-->
+<!--                        <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Error</div>-->
+<!--                        <button type="submit" class="btn btn-default">Зарегистрировать</button>-->
+<!--                    </form>-->
+<!--                </div>-->
             </div>
         </div>
     </div>
