--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -46,7 +46,12 @@
                     <h2>[[${product.price}]] руб.</h2>
                     <p>[[${product.color}]]</p>
 
-                    <button th:data-productId="${product.id}" th:onclick="addButtonHandler(this.getAttribute('data-productId'))">
+<!--                    <button th:data-productId="${product.id}" th:onclick="addButtonHandler(this.getAttribute('data-productId'))">-->
+<!--                      В корзину-->
+<!--                    </button>-->
+                    <button class="btn btn-default add-to-cart" th:data-productId="${product.id}"
+                            th:onclick="addButtonHandler(this.getAttribute('data-productId'))">
+                      <i class="fa fa-shopping-cart"> </i>
                       В корзину
                     </button>
                  </div>
