--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -37,11 +37,6 @@
 
             <th:block th:insert="~{layouts/categorybrands.html}"/>
 
-            <!--						<div class="shipping text-center">&lt;!&ndash;shipping&ndash;&gt;-->
-            <!--							<img src="/images/home/shipping.png" alt="" />-->
-            <!--						</div>&lt;!&ndash;/shipping&ndash;&gt;-->
-
-
             <div class="col-sm-9 padding-right">
                 <div class="features_items"><!--features_items-->
                     <h2 class="title text-center">Товары</h2>
@@ -53,21 +48,13 @@
 
                                     <div class="productinfo text-center">
                                         <img th:src="@{'/images/shop/' + ${product.brand} + '.png'}" alt="268х249">
-<!--                                        <img src="/images/shop/alize_gold.png" alt="268х249"/>-->
                                         <h2>[[${product.price}]] руб.</h2>
                                         <p>[[${product.color}]]</p>
-
-                                        <!--										<form method="post" th:action="@{/cart/add/}">-->
-                                        <!--											<input class="a_button" type="text" value="quantity">-->
-                                        <!--										</form>	-->
-
-                                        <button th:data-productId="${product.id}" th:onclick="addButtonHandler(this.getAttribute('data-productId'))">
-                                            В Корзину
+                                    <button class="btn btn-default add-to-cart" th:data-productId="${product.id}" th:onclick="addButtonHandler(this.getAttribute('data-productId'))">
+                                            <i class="fa fa-shopping-cart"> </i>
+                                            В корзину
                                         </button>
-
-                                        <!--										<a th:href="@{/products/addPosition}" class="btn btn-default add-to-cart">-->
-                                        <!--											<i class="fa fa-shopping-cart"></i>Add to cart</a>-->
-                                    </div>
+                                  </div>
                                 </div>
                                 <div class="choose">
                                     <ul class="nav nav-pills nav-justified">
